--- a/pod-affinity.yaml
+++ b/pod-affinity.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-2
+  name: nginx-1
   labels:
     project: expense
 spec:
@@ -9,18 +9,18 @@ spec:
   - name: nginx
     image: nginx 
 ---
-# apiVersion: v1
-# kind: Pod
-# metadata:
-#   name: nginx-2
-# spec:
-#   affinity:
-#     podAffinity:
-#       requiredDuringSchedulingIgnoredDuringExecution:
-#       - labelSelector:
-#           matchExpressions:
-#           - key: project
-#             operator: In
-#             values:
-#             - expense
-#         topologyKey: topology.kubernetes.io/zone
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx-2
+spec:
+  affinity:
+    podAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+      - labelSelector:
+          matchExpressions:
+          - key: project
+            operator: In
+            values:
+            - expense
+        topologyKey: topology.kubernetes.io/zone
