--- a/pod-affinity.yaml
+++ b/pod-affinity.yaml
@@ -27,3 +27,25 @@ spec:
   containers:
   - name: nginx
     image: nginx 
+
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx-3
+spec:
+  affinity:
+    podAntiAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        podAffinityTerm:
+          labelSelector:
+            matchExpressions:
+            - key: project
+              operator: In
+              values:
+              - expense
+          topologyKey: topology.kubernetes.io/zone
+  containers:
+  - name: nginx
+    image: nginx 
